# aidin_m1

./: CMakeLists.txt  README.md  package.xml
common/: CMakeLists.txt
launch/: aidin_m1.launch.py
meshes/: Body_vis.stl  LF_hip_vis.stl  LF_knee_vis.stl  RF_hip_vis.stl  RF_knee.stl  RF_knee_vis.stl  RF_scap.stl  actuator.stl  actuator_1.stl  actuator_2.stl  body_1.stl  feet.stl  leg_lower.stl  sc_cover_RF_1.stl  upper_leg_test_2.stl
src/: CMakeLists.txt  CMakelists.txt  JointControl.cpp  JointControl.h  Kinematics.cpp  aidin_m1_command.cpp  aidin_m1_control_node(backup).cpp  aidin_m1_control_node.cpp  aidin_m1_main copy.cpp  aidin_m1_main.cpp  aidin_m1_plugin.cpp  aidin_m1_plugin.h  backup.cpp  backup_2.cpp  convexMPC.cpp  convexMPC.h  func.cpp  func.h  joint_control_node.cpp  trajectory_generation.cpp
src/AiDIN_Controller/: CMakeLists.txt  CMakelists.txt  JointControl.cpp  JointControl.h  func.cpp  func.h  main.cpp
src/AiDIN_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  RobotState.cpp  RobotState.h  SolverMPC.h  common_types.h  convexMPC_interface.cpp  convexMPC_interface.h  solverMPC.cpp
src/convexMPC/: convexMPC.cpp
src/gazebo_plugin/: CMakeLists.txt  CMakelists.txt  aidin_m1_plugin.cpp  aidin_m1_plugin.h
urdf/: aidin8.gv  aidin8.urdf  aidin_m1 (backup).urdf  aidin_m1.gv  aidin_m1.urdf  aidin_m1.urdf.xacro  aidin_m1.xacro  aidin_m1_backup.urdf  leg.urdf  rrbot.urdf
worlds/: empty.world  house.world  just_ground.world  simple_env_1.world  waypoint.world
